# caper

./: .TODO.swo  .gitignore  .travis.yml  :w  Cargo.toml  LICENSE.md  README.md  \  imgui.ini
examples/: audio.rs  audio_3d.rs  cubes.rs  cubes_example.rs  demo.rs  game.rs  load_mesh.rs  main_example.rs  perlin.rs  perlin_example.rs  physics.rs  physics_game.rs  posteffect.rs  proc.rs  proc_example.rs  simple.rs  spheres.rs  tags.rs  texture.rs  transforms.rs  ui.rs
src/: .main.rs.swp  audio.rs  collision.rs  game.rs  input.rs  lib.rs  lighting.rs  main.rs  mesh.rs  persist.rs  posteffect.rs  renderer.rs  texture.rs  types.rs  utils.rs
src/assets/: screenolith.mtl
src/input/: mod.rs
src/renderer/: lighting.rs  mod.rs  posteffect.rs  texture.rs
src/renderer/resources/: LICENSE_normal.png.md
src/renderer/shader/: default.rs  dist.rs  mod.rs  post.rs  texture.rs
src/shader/: default.rs  dist.rs  height.rs  height_tess.rs  line.rs  mod.rs  pbr.rs  post.rs  texture.rs
src/support/: mod.rs
src/utils/: mod.rs
tests/: main_test.rs
