[package]
name = "caper"
version = "0.12.2"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/caper"
homepage = "https://github.com/shockham/caper"
documentation = "https://docs.rs/caper/*/caper/"
description = "Minimalist game framework"

[features]
default = ["impose"]
3d-audio = ["ambisonic"]
no-audio = []

[dependencies]
glium = "0.26"
glium_text_rusttype = "0.3.3"
imgui = "0.3"
imgui-glium-renderer = "0.3"

time = "0.2"
genmesh = "0.6"
obj = { version = "0.9", features = ["genmesh"] }
noise = "0.6"
fps_counter = "1.0.0"
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
nphysics3d = "0.11"
nalgebra = "0.18"
ncollide3d = "0.19"
image = "0.23"
gif = "0.10"
derive_builder = "0.9"
lazy_static = "1.0"
rayon = "1.0"
volition = "0.1.4"
impose = { version = "0.3", optional = true }
ambisonic = { version = "0.3", optional = true }

[[example]]
name = "audio"

[[example]]
name = "audio_3d"
required-features = ["3d-audio"]

[[example]]
name = "cubes"

[[example]]
name = "physics"

[[example]]
name = "posteffect"

[[example]]
name = "spheres"

[[example]]
name = "transforms"

[[example]]
name = "simple"

[[example]]
name = "tags"

[[example]]
name = "demo"

[[example]]
name = "proc"

[[example]]
name = "texture"

[[example]]
name = "load_mesh"

[[example]]
name = "perlin"
